<resources>
    <string name="app_name">Audio Visualizer</string>
    <!-- - - - - - - - - - - - - - - -
      - Used by Preferences  -
      - - - - - - - - - - - - - - - -->

    <string name="pref_color_key" translatable="false">color</string>
    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>

    <!-- Value in SharedPreferences for blue color option -->
    <string name="pref_color_blue_value" translatable="false">blue</string>

    <!-- Value in SharedPreferences for green color option -->
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="settings">Settings</string>
    <string name="shared_preference_bass_label">Show Bass</string>
    <string name="shared_preference_bass_key" translatable="false">show_bass</string>
    <string name="pref_show_on">Shown</string>
    <string name="pref_show_off">Hidden</string>
    <string name="shared_preference_treble_key" translatable="false">show_treble</string>
    <string name="shared_preference_treble_label">Show Treble</string>
    <string name="shared_preference_mid_range_label">Show Mid Range</string>
    <string name="shared_preference_mid_range_key" translatable="false">show_mid_range</string>
    <string name="pref_color_label">Show Color</string>
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>
    <string name="pref_size_default" translatable="false">1</string>
    <string name="pref_size_key" translatable="false">size</string>
    <string name="pref_size_label">Size Multiplier</string>

</resources>
